--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="container-fluid">
-			<p href="/Mapify/index.html">Mapify</p>
+			<a href="/Mapify/index.html">Mapify</a>
 		</div>
 	</body>
 </html>
